--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 node_modules
+.vscode
+translation-mobile-app.zip
 *~
 *.sw[mnpcod]
 .tmp
